--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ tr.eid-day td:first-child{ color:var(--accent); font-weight:800; }
   <div class="panel">
     <div class="header-row">
       <div>
-        <div class="title">Ramadhan Home<br>Purwokerto</div>
+        <div class="title">Jadwal Imsakiyah<br>Purwokerto</div>
         <div class="big-date" id="bigDate">Memuat...</div>
         <div class="hijri" id="hijriDate" style="color:var(--muted); font-size:14px; margin-top:5px;"></div>
       </div>
