--- a/index.html
+++ b/index.html
@@ -361,6 +361,8 @@ function triggerAdzan(name){
     overlaySub.textContent = "Selamat berbuka, jangan lupa bersyukur"; //
   } else if (name === 'Subuh') {
     overlaySub.textContent = "Selamat Berpuasa"; //
+  }else {
+    overlaySub.textContent = "Selamat Berpuasa"; //
   }
   
   document.getElementById('overlay').classList.add('show');
